ubuntu-community-accomplishments (0.1.2) precise; urgency=low

  * New: Blog on Planet Ubuntu (Jono Bacon)
  * New: Ubuntu Cloak (José Antonio Rey)
  * New: Signed Canonical Contributor Agreement (Angelo Compagnucci)
  * Added remaining tests.

 -- Jono Bacon <jono@ubuntu.com>  Wed, 16 May 2012 01:13:09 -0700

ubuntu-community-accomplishments (0.1.1) precise; urgency=low

  * New release with new set of accomplishments.
  * Added tests.

 -- Jono Bacon <jono@ubuntu.com>  Mon, 14 May 2012 11:53:31 -0700

ubuntu-community-accomplishments (0.1) precise; urgency=low

  * Initial Release.

 -- Jono Bacon <jono@ubuntu.com>  Sun, 01 Apr 2012 08:23:52 -0600