@@ -1,0 +1,26 @@
+[accomplishment]
+title=Uploaded First Branch To Launchpad
+description=You have uploaded your first branch to Launchpad
+application=ubuntu-community
+category=Launchpad
+icon=launchpad.png
+depends=ubuntu-community/registered-on-launchpad
+needs-signing=true
+needs-information=launchpad-email
+summary = A core part of Launchpad is the ability to host different directories of code. These directories are called <i>branches</i> and we use the Bazaar version control system to manage them. We can use these branches to share contributions and to propose improvements and changes to other branches and projects.
+    This trophy is awarded when you have created and uploaded your very first branch. We will help you get started right away!
+    It is recommended that you read a quick primer on how version control works. See the <i>Further Reading</i> section below for some helpful links
+steps: You first need to create some code that you want to upload to Launchpad. We are going to presume you have a directory with code in it that you want to use.
+    Load a terminal and change directories to the directory with the branch in it (e.g. <tt>cd mydir</tt>).
+    We first need to initialize the directory so it can be used in bazaar. This is as simple as running <tt>bzr init</tt>. Now we are tracking this directory with Bazaar.
+    We now need to add the files in the directory to Bazaar so that it tracks changes. Do this by running <tt>bzr add</tt>. Whenever you add new files be sure to run <tt>bzr add</tt> again.
+    Whenever you change anything in the directory (such as editing code), you need to commit the changes. Do this by running <tt>bzr commit</tt>. A text editor will open where you can enter the changes (if your default text editor is Nano, save your changes with <i>Ctrl-O</i> and then <i>Ctrl-X</i>).
+    We are now ready to upload your branch to Launchpad. This is known as <i>pushing</i> a branch. To do this type <tt>bzr push lp:~<your-username>/+junk/<name></tt> (for example: <tt>bzr push lp:~bob/+junk/my-first-branch</tt>). Please note your branch name can be anything; it does not need to be the same name as the directory with your code in it.
+    You can now go to your Launchpad profile, click <i>Code</i> and see the branch.
+tips: If you want to grab a branch of another project on Launchpad (e.g. <i>ubuntu-community-accomplishments</i>, run <tt>bzr branch lp:ubuntu-community-accomplishments</tt>. You can then add your own modified version of this branch by using the project name in the push address (e.g. <tt>bzr push lp:~bob/ubuntu-community-accomplishments/my-first-branch</tt>.
+pitfalls: Never upload code you don't own or illigal content to Launchpad.
+links: https://help.launchpad.net/Code/Review
+       http://wiki.bazaar.canonical.com/Tutorials
+       http://doc.bazaar.canonical.com
+help = #ubuntu-devel on Freenode
+author = Jono Bacon <jono@ubuntu.com>
