@@ -1,0 +1,35 @@
+#!/usr/bin/python
+import traceback, sys
+
+from accomplishments.daemon import dbusapi
+from launchpadlib.launchpad import Launchpad
+
+try:
+    api = dbusapi.Accomplishments()
+    f = api.get_extra_information("ubuntu-community", "launchpad-email")
+    if bool(f[0]["launchpad-email"]) == False:
+        sys.exit(4)
+    else:
+        email = f[0]["launchpad-email"]
+
+    # Check if user has at least one merge proposal with
+    # 'Merged' status
+    l = Launchpad.login_anonymously(
+        'ubuntu-community accomplishments', 'production')
+    me = l.people.getByEmail(email=email)
+
+    branches = [branch for branch in me.getBranches()]    
+
+    if me == None:
+        sys.exit(1)
+    else:
+        if len(branches) > 0:
+            sys.exit(0)
+        else:
+            sys.exit(1)
+
+except SystemExit, e:
+    sys.exit(e.code)
+except:
+    traceback.print_exc()
+    sys.exit(2)
